cmake_minimum_required(VERSION 2.6)
project(CS236)
set(SRC_FILES parser/main.cpp datalogProgram.cpp parameter.cpp parser.cpp predicate.cpp rule.cpp scanner.cpp datalogProgram.h parameter.h parser.h predicate.h rule.h scanner.h token.h utils.h)
set(CMAKE_CXX_FLAGS -std=c++11)
add_executable(lab2 ${SRC_FILES})
